--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "beste/in-memory-cache": "^1.0",
         "beste/json": "^1.2.1",
         "fig/http-message-util": "^1.1.5",
-        "firebase/php-jwt": "^6.3.2",
+        "gomee/firebase-php-jwt": "^6.10",
         "google/auth": "^1.24",
         "google/cloud-core": "^1.48.1",
         "google/cloud-storage": "^1.30.1",
